# Cellarium

./: LICENSE  README.md  TECHNICAL_DETAILS.md  pyproject.toml
cellarium/: __init__.py  __main__.py  app.py  cli.py  config.py
cellarium/assets/: styles.css
cellarium/callbacks/: __init__.py
cellarium/components/: __init__.py
cellarium/components/config_drawers/: __init__.py  expression_config.py  scatter_config.py
cellarium/components/dashboard/: __init__.py  grid.py  panel.py  toolbar.py
cellarium/components/modals/: __init__.py  export_subset.py  load_layout.py  save_layout.py
cellarium/components/plots/: __init__.py  dotplot.py  heatmap.py  scatter.py  violin.py
cellarium/components/sidebar/: __init__.py  data_info.py  page_navigator.py
cellarium/data/: __init__.py  export.py  manager.py
cellarium/db/: __init__.py  repository.py  schema.py
cellarium/layouts/: __init__.py  serializer.py  templates.py
