[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cellarium"
version = "0.1.0"
description = "Local webapp for exploring AnnData single-cell genomics data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ehsan" }
]
keywords = ["single-cell", "anndata", "visualization", "dash", "scanpy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "dash>=2.14.0",
    "dash-mantine-components>=0.14.0",
    "dash-iconify>=0.1.2",
    "plotly>=5.18.0",
    "anndata>=0.10.0",
    "scanpy>=1.9.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
cellarium = "cellarium.cli:app"

[project.urls]
Homepage = "https://github.com/ehsan/cellarium"
Documentation = "https://github.com/ehsan/cellarium#readme"
Repository = "https://github.com/ehsan/cellarium"

[tool.hatch.build.targets.wheel]
packages = ["cellarium"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
